# etg-scheduler

./: .gitignore  README.md  README_FOR_STUDENT_PL.md  SETUP.md  WYJASNIENIE_PROJEKTU_PL.txt  pyproject.toml  requirements.txt  run_app.bat  setup_windows.bat  setup_windows.ps1
etg_scheduler/: app.py
output/: hospital_treatment_workflow_20260630_125015_report.md  hospital_treatment_workflow_20260630_125015_schedule.csv  hospital_treatment_workflow_20260630_125015_schedule.json  hospital_treatment_workflow_20260630_131440_report.md  hospital_treatment_workflow_20260630_131440_schedule.json  hospital_treatment_workflow_20260630_133234_report.md  hospital_treatment_workflow_20260630_133234_schedule.json  logistics_warehouse_shift_20260630_125025_report.md  logistics_warehouse_shift_20260630_125025_schedule.json  logistics_warehouse_shift_20260630_131440_report.md  logistics_warehouse_shift_20260630_131440_schedule.json  logistics_warehouse_shift_20260630_133234_report.md  logistics_warehouse_shift_20260630_133234_schedule.csv  logistics_warehouse_shift_20260630_133234_schedule.json  production_line_assembly_20260630_125025_report.md  production_line_assembly_20260630_125025_schedule.json  production_line_assembly_20260630_131440_report.md  production_line_assembly_20260630_131440_schedule.json  production_line_assembly_20260630_133234_report.md  production_line_assembly_20260630_133234_schedule.csv  production_line_assembly_20260630_133234_schedule.json  water_power_plant_building_process_20260630_133122_report.md  (+2 more)
scenarios/: hospital.json  logistics_warehouse.json  (+2 more)
(+18 files in other folders)
