[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etg-scheduler"
version = "0.1.0"
description = "Academic ETG scheduler console app"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Student" }
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "networkx>=3.2,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[project.scripts]
etg-scheduler = "etg_scheduler.app:console_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
