[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etg-scheduler"
version = "0.1.0"
description = "Academic ETG scheduler console app"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Student" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
